--- a/html/demo13CSS06.html
+++ b/html/demo13CSS06.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>新闻预警</title>
+    <link rel="stylesheet" href="../css/demo13CSS06.css">
 </head>
 <body>
-$END$
+    <h1>高温预警</h1>
+    <p class="head">预报：张峰 曹勇 签发：孙军 <strong>2020</strong> <strong>08</strong>月 <strong>20</strong> 日 <strong>18</strong></p>
+    <hr>
+    <p class="indent">中央气象台8月20日18时解除高温黄色预警：</p>
+    <p class="indent">
+        由于高温范围明显缩小，强度减弱，因此解除高温黄色预警。但预计8月21日白天，新疆南疆东部、甘肃西北部、安徽东南部、江苏南部、浙江大部、湖南南部、江西东北部和南部、福建西北部、广东中部和北部等地有35℃以上高温天气，其中，南疆东部、浙江西部、江苏南部等地部分地区最高气温37～39℃。</p>
+    <p class="indent">防御指南：</p>
+    <p class="indent">1、尽量避免午后高温时段的户外活动，对老、弱、病、幼人群提供防暑降温指导，并采取必要的防护措施；</p>
+    <p class="indent">2、有关部门应注意防范因用电量过高，电线、变压器等电力设备负载大而引发火灾；</p>
+    <p class="indent">3、户外或者高温条件下的作业人员应当采取必要的防护措施；</p>
+    <p class="indent">4、注意作息时间，保证睡眠，必要时准备一些常用的防暑降温药品；</p>
+    <p class="indent">5、媒体应加强防暑降温保健知识的宣传，各相关部门落实防暑降温保障措施。</p>
 </body>
 </html>
