--- a/html/demo14CSS07SonSelect.html
+++ b/html/demo14CSS07SonSelect.html
@@ -15,6 +15,10 @@
     li {
         list-style: none;
     }
+
+    .nav>li>p{
+        color: red;
+    }
   </style >
 </head >
 <body >
@@ -33,5 +37,11 @@
     <li >4</li >
   </ul >
 
+  <ul class="nav">
+      <li ><p>hello world</p></li >
+      <li >2</li >
+      <li >3</li >
+      <li >4</li >
+ </ul >
 </body >
 </html >
