--- a/html/demo17CSS10Display.html
+++ b/html/demo17CSS10Display.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<html lang="en" >
+<head >
+  <meta charset="UTF-8" >
+  <title >元素显示模式转换</title >
+  <style >
+    a {
+        display: block;
+        height: 50px;
+        width: 200px;
+        background-color: skyblue;
+        color: black;
+        text-align: center;
+        line-height: 50px;
+    }
+    a:hover {
+        color: red;
+    }
+  </style >
+</head >
+<body >
+  <a href="#" >圣诞老人</a >
+</body >
+</html >
