--- a/html/demo19CSS12BackroungImage.html
+++ b/html/demo19CSS12BackroungImage.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<html lang="en" >
+<head >
+  <meta charset="UTF-8" >
+  <title >背景图片</title >
+  <style >
+    div {
+        height: 400px;
+        width: 2000px;
+        background-image: url("../images/1.jpg");
+        /*默认为repeat*/
+        background-repeat: no-repeat;
+    }
+  </style >
+</head >
+<body >
+  <div></div>
+</body >
+</html >
