add some demo and picture

--- a/html/demo19CSS12BackroungImage.html
+++ b/html/demo19CSS12BackroungImage.html
@@ -10,6 +10,11 @@
         background-image: url("../images/1.jpg");
         /*默认为repeat*/
         background-repeat: no-repeat;
+        /*页面元素既可以添加背景颜色也可以添加背景图片，只不过背景图片会压住背景颜色*/
+        /*水平一定是靠右对齐， 第二个参数省略 y轴是垂直居中的*/
+        background-position: right;
+        /*垂直一定是顶部对齐， 第二个参数省略 x轴是水平居中的*/
+        /*background-position: top;*/
     }
   </style >
 </head >
