--- a/html/demo30CSS23.html
+++ b/html/demo30CSS23.html
@@ -3,8 +3,58 @@
 <head >
   <meta charset="UTF-8" >
   <title >案例快报模块列表</title >
+  <style >
+    * {
+      margin: 0;
+      padding: 0;
+    }
+    .box {
+        width: 248px;
+        height: 163px;
+        border: 1px solid #ccc;
+        margin: 100px auto;
+    }
+
+    ul, li {
+      list-style: none;
+    }
+
+    .box h3 {
+        height: 32px;
+        border-bottom: 1px dotted #ccc;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 32px;
+        padding-left: 15px;
+    }
+
+    .box ul {
+       padding-top: 7px;
+    }
+
+    .box ul li {
+      height: 23px;
+      line-height: 23px;
+      padding-left: 20px;
+    }
+
+    .box ul li a {
+      font-size: 12px;
+      color: #666;
+      text-decoration: none;
+    }
+  </style >
 </head >
 <body >
-
+  <div class="box">
+    <h3>品优购快报</h3>
+    <ul>
+      <li class="top"><a href="#">[特惠] 爆款耳机5折秒！</a></li>
+      <li><a href="#">[特惠] 母亲节，健康好礼低至5折</a></li>
+      <li><a href="#">[特惠] 爆款耳机55折秒！</a></li>
+      <li><a href="#">[特惠] 9.9元洗100张照片！</a></li>
+      <li><a href="#">[特惠] 长虹智能空调立省1000</a></li>
+    </ul>
+  </div>
 </body >
 </html >
