--- a/html/demo27CSS20XiaoMi.html
+++ b/html/demo27CSS20XiaoMi.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>小米侧边栏</title>
     <style>
-        a {
-            /* 当没有指定宽度或高度，padding是不会撑开盒子大小 */
-            display: block;
-            height: 40px;
-            width: 200px;
-            background-color:  #455058;
-            line-height: 40px;
-            padding-left: 30px;
-            text-decoration: none;
-            font-size: 14px;
-            color: white;
-        }
-        a:hover {
-            color: #ff6700;
-        }
+      a {
+        /* 当没有指定宽度或高度，padding是不会撑开盒子大小 */
+        display: block;
+        height: 40px;
+        width: 200px;
+        background-color: #455058;
+        line-height: 40px;
+        padding-left: 30px;
+        text-decoration: none;
+        font-size: 14px;
+        color: white;
+      }
+
+      a:hover {
+        color: #ff6700;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="nav">
-        <a href="#">手机 电话卡</a>
-        <a href="#">电视 盒子</a>
-        <a href="#">笔记本 显示器</a>
-        <a href="#">家电 插线板</a>
-        <a href="#">出行 穿戴</a>
-        <a href="#">智能 路由器</a>
-        <a href="#">电源 配件</a>
-        <a href="#">健康 儿童</a>
-        <a href="#">耳机 音箱</a>
-        <a href="#">生活 箱包</a>
+      <a href="#">手机 电话卡</a>
+      <a href="#">电视 盒子</a>
+      <a href="#">笔记本 显示器</a>
+      <a href="#">家电 插线板</a>
+      <a href="#">出行 穿戴</a>
+      <a href="#">智能 路由器</a>
+      <a href="#">电源 配件</a>
+      <a href="#">健康 儿童</a>
+      <a href="#">耳机 音箱</a>
+      <a href="#">生活 箱包</a>
     </div>
-</body>
+  </body>
 </html>
