--- a/project/demo02/index.html
+++ b/project/demo02/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- 头 -->
     <div class="header w">
       <div class="logo"><img src="images/logo_03.png" alt="" /></div>
       <div class="nav">
@@ -19,6 +20,168 @@
       <div class="search">
         <input type="text" placeholder="请输入关键词" />
         <button></button>
+      </div>
+      <div class="user"></div>
+    </div>
+    <!-- 核心 -->
+    <div class="banner">
+      <div class="w">
+        <div class="subnav">
+          <ul>
+            <li>
+              <a href="#">前端开发<span> &gt; </span></a>
+            </li>
+            <li>
+              <a href="#">后端开发<span> &gt; </span></a>
+            </li>
+            <li>
+              <a href="#">移动开发<span> &gt; </span></a>
+            </li>
+            <li>
+              <a href="#">人工智能<span>&gt; </span></a>
+            </li>
+            <li>
+              <a href="#">商业预测<span> &gt; </span></a>
+            </li>
+            <li>
+              <a href="#">云计算&大数据<span> &gt; </span></a>
+            </li>
+            <li>
+              <a href="#">运维&从测试<span> &gt; </span></a>
+            </li>
+            <li>
+              <a href="#">UI产品<span> &gt; </span></a>
+            </li>
+            <li>
+              <a href="#">产品<span> &gt; </span></a>
+            </li>
+          </ul>
+        </div>
+        <div class="course">
+          <h2>我的课程表</h2>
+          <div class="bd">
+            <ul>
+              <li>
+                <h4>继续学习 程序语言设计</h4>
+                <p>正在学习-使用对象</p>
+              </li>
+              <li>
+                <h4>继续学习 程序语言设计</h4>
+                <p>正在学习-使用对象</p>
+              </li>
+              <li>
+                <h4>继续学习 程序语言设计</h4>
+                <p>正在学习-使用对象</p>
+              </li>
+            </ul>
+            <a href="#" class="more">全部课程</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- 精品推荐 -->
+    <div class="goods w">
+      <ul>
+        <li>
+          <h3>精品推荐</h3>
+          <!-- <span>|</span> -->
+        </li>
+        <li><a href="#">JQuery</a><span>|</span></li>
+        <li><a href="#">Spark</a><span>|</span></li>
+        <li><a href="#">MySQL</a><span>|</span></li>
+        <li><a href="#">JavaWeb</a><span>|</span></li>
+        <li><a href="#">JavaScript</a><span>|</span></li>
+        <li><a href="#">Python</a><span>|</span></li>
+        <a href="#">修改兴趣</a>
+      </ul>
+    </div>
+    <div class="fine w">
+      <div class="fine-title">
+        <h3>精品推荐</h3>
+        <a href="#">查看全部</a>
+      </div>
+      <!-- 主要内容 -->
+      <div class="content">
+        <div class="one">
+          <div class="img"><img src="images/图层 133.png" alt="" /></div>
+          <div class="desc">
+            <h3>Think PHP 5.0 博客系统实战项目演练</h3>
+            <span class="high">高级</span>
+            <span>&nbsp;&nbsp;•&nbsp;&nbsp;1125人在学习</span>
+          </div>
+        </div>
+        <div class="one">
+          <div class="img"><img src="images/图层 133.png" alt="" /></div>
+          <div class="desc">
+            <h3>Think PHP 5.0 博客系统实战项目演练</h3>
+            <span class="high">高级</span>
+            <span>&nbsp;&nbsp;•&nbsp;&nbsp;1125人在学习</span>
+          </div>
+        </div>
+        <div class="one">
+          <div class="img"><img src="images/图层 133.png" alt="" /></div>
+          <div class="desc">
+            <h3>Think PHP 5.0 博客系统实战项目演练</h3>
+            <span class="high">高级</span>
+            <span>&nbsp;&nbsp;•&nbsp;&nbsp;1125人在学习</span>
+          </div>
+        </div>
+        <div class="one">
+          <div class="img"><img src="images/图层 133.png" alt="" /></div>
+          <div class="desc">
+            <h3>Think PHP 5.0 博客系统实战项目演练</h3>
+            <span class="high">高级</span>
+            <span>&nbsp;&nbsp;•&nbsp;&nbsp;1125人在学习</span>
+          </div>
+        </div>
+        <div class="one last">
+          <div class="img"><img src="images/图层 133.png" alt="" /></div>
+          <div class="desc">
+            <h3>Think PHP 5.0 博客系统实战项目演练</h3>
+            <span class="high">高级</span>
+            <span>&nbsp;&nbsp;•&nbsp;&nbsp;1125人在学习</span>
+          </div>
+        </div>
+        <div class="one">
+          <div class="img"><img src="images/图层 133.png" alt="" /></div>
+          <div class="desc">
+            <h3>Think PHP 5.0 博客系统实战项目演练</h3>
+            <span class="high">高级</span>
+            <span>&nbsp;&nbsp;•&nbsp;&nbsp;1125人在学习</span>
+          </div>
+        </div>
+        <div class="one">
+          <div class="img"><img src="images/图层 133.png" alt="" /></div>
+          <div class="desc">
+            <h3>Think PHP 5.0 博客系统实战项目演练</h3>
+            <span class="high">高级</span>
+            <span>&nbsp;&nbsp;•&nbsp;&nbsp;1125人在学习</span>
+          </div>
+        </div>
+        <div class="one">
+          <div class="img"><img src="images/图层 133.png" alt="" /></div>
+          <div class="desc">
+            <h3>Think PHP 5.0 博客系统实战项目演练</h3>
+            <span class="high">高级</span>
+            <span>&nbsp;&nbsp;•&nbsp;&nbsp;1125人在学习</span>
+          </div>
+        </div>
+        <div class="one">
+          <div class="img"><img src="images/图层 133.png" alt="" /></div>
+          <div class="desc">
+            <h3>Think PHP 5.0 博客系统实战项目演练</h3>
+            <span class="high">高级</span>
+            <span>&nbsp;&nbsp;•&nbsp;&nbsp;1125人在学习</span>
+          </div>
+        </div>
+        <div class="one last">
+          <div class="img"><img src="images/图层 133.png" alt="" /></div>
+          <div class="desc">
+            <h3>Think PHP 5.0 博客系统实战项目演练</h3>
+            <span class="high">高级</span>
+            <span>&nbsp;&nbsp;•&nbsp;&nbsp;1125人在学习</span>
+          </div>
+        </div>
       </div>
     </div>
   </body>
