--- a/project/demo02/index.html
+++ b/project/demo02/index.html
@@ -102,6 +102,7 @@
       </div>
       <!-- 主要内容 -->
       <div class="content">
+        <img src="images/50.png" alt="" />
         <div class="one">
           <div class="img"><img src="images/图层 133.png" alt="" /></div>
           <div class="desc">
