--- a/小米商城/index.html
+++ b/小米商城/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/endnav.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="fonts/iconfont.css" />
   </head>
   <body>
@@ -151,6 +153,40 @@
         <div class="big"><img src="images/33.jpg" alt="" /></div>
       </div>
     </div>
+    <!-- 导航栏结束 -->
+
+    <!-- 主体部分 -->
+    <main>
+      <div class="xmShanGou w">
+        <div class="top">
+          <h1>小米闪购</h1>
+          <div class="right">
+            <span class="jiantou">&lt;</span>
+            <span class="jiantou">&gt;</span>
+          </div>
+        </div>
+        <div class="main">
+          <div class="content">
+            <div class="left">
+              <h1>20:00 场</h1>
+              <span class="iconfont icon-shandian"></span>
+              <p class="span">距离开始还有</p>
+              <p class="time">
+                <span>03</span><i class="iconfont icon-icon50"></i
+                ><span>32</span><i class="iconfont icon-icon50"></i>
+                <span>50</span>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!-- 主体部分结束 -->
+
+    <!-- 结尾部分 -->
+    <footer></footer>
+    <!-- 结束 -->
     <script src="js/nav.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
